added whole site

--- a/index.html
+++ b/index.html
@@ -4,18 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muslim Store</title>
+     <script src="https://kit.fontawesome.com/cb383922d0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 <body>
     <header>
+        <nav class="container">
+            <img src="./assets/images/logo.png" alt="   ">
+            <div class="search">
+                <input type="search" name="" id="" placeholder="Search">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <ul class="nav-items">
+                <li><a href="">Home</a></li>
+                <li><a href="">Product</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </nav>
 
+        <section class="banner container">
+            <div class="about-banner">
+                <h1 class="banner-title">MI LED 4A PRO 32</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <span>$1289</span> <br>
+                <button class="panda-btn">BUY NOW <i class="fa-solid fa-right-long"></i></button>
+            </div>
+            <img src="./assets/images/banner-images/tv.png" alt="" class="banner-img">
+        </section>
+
+        <section class="categories container">
+            <h1 class="common-section-title">Categories</h1>
+            <div class="categories-card-container">
+                <div class="category-card">
+                    <h3>Watch</h3>
+                    <img src="./assets/images/categories/watch.png" alt="">
+                </div>
+                <div class="category-card">
+                    <h3>Watch</h3>
+                    <img src="./assets/images/categories/bag.png" alt="">
+                </div>
+                <div class="category-card">
+                    <h3>Watch</h3>
+                    <img src="./assets/images/categories/shoes.png" alt="">
+                </div>
+            </div>
+        </section>
     </header>
     <main>
-
+        <section class="shoes-backpack-parent">
+           <div class="shoes-section container">
+                <div class="shoes-backpack-section-title-parent">
+                    <h2>Shoes</h2>
+                    <p>See All</p>
+                </div>
+                <div class="shoe-card-container">
+                    <div class="shoe-card">
+                        <img src="./assets/images/shoes/shoe-1.png" alt="">
+                        <h2>Reebok Dart Men’s Shoes</h2>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                        <span>$1243</span> <br>
+                         <button class="panda-btn">BUY NOW <i class="fa-solid fa-right-long"></i></button>
+                    </div>
+                     <div class="shoe-card">
+                         <img src="./assets/images/shoes/shoe-2.png" alt="">
+                         <h2>Reebok Dart Men’s Shoes</h2>
+                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                         <span>$1243</span> <br>
+                         <button class="panda-btn">BUY NOW <i class="fa-solid fa-right-long"></i></button>
+                     </div>
+                    <div class="shoe-card">
+                         <img src="./assets/images/shoes/shoe-3.png" alt="">
+                         <h2>Reebok Dart Men’s Shoes</h2>
+                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                         <span>$1243</span> <br>
+                         <button class="panda-btn">BUY NOW <i class="fa-solid fa-right-long"></i></button>
+                     </div>
+                </div>
+           </div>
+           <div class="shoes-section container">
+                <div class="shoes-backpack-section-title-parent">
+                    <h2>Backpack</h2>
+                    <p>See All</p>
+                </div>
+                <div class="shoe-card-container">
+                    <div class="shoe-card">
+                        <img src="./assets/images/bags/bag-1.png" alt="">
+                        <h2>Ison Backpack</h2>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                        <span>$1243</span> <br>
+                         <button class="panda-btn">BUY NOW <i class="fa-solid fa-right-long"></i></button>
+                    </div>
+                     <div class="shoe-card">
+                         <img src="./assets/images/bags/bag-2.png" alt="">
+                         <h2>Biaowang Backpack</h2>
+                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                         <span>$1243</span> <br>
+                         <button class="panda-btn">BUY NOW <i class="fa-solid fa-right-long"></i></button>
+                     </div>
+                    <div class="shoe-card">
+                         <img src="./assets/images/bags/bag-3.png" alt="">
+                         <h2>Dxyizu WS54 Smart</h2>
+                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                         <span>$1243</span> <br>
+                         <button class="panda-btn">BUY NOW <i class="fa-solid fa-right-long"></i></button>
+                     </div>
+                </div>
+           </div>
+        </section>
     </main>
     <footer>
-
+        <div class="contact container">
+            <h1>LET'S STAY IN TOUCH</h1>
+            <p>Get updates on sales specials and more</p>
+            <div class="input-btn">
+                <input type="email" placeholder="Enter your email">
+                <button class="panda-btn">Send</button>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
